# Daft

./: .gitignore  AGENTS.md  AVRO_TAR_SUPPORT.md  Cargo.toml  pyproject.toml  todo.md
.cargo/: config.toml
.github/actions/install/: action.yaml
.github/scripts/: upload_wheels_artifact.cjs
.github/workflows/: build-wheels-all-platforms.yml
daft/: __init__.py
daft/daft/: __init__.pyi
daft/dataframe/: dataframe.py
daft/functions/: __init__.py  spatial.py  spatial_index.py
daft/io/: __init__.py
daft/io/avro_tar/: __init__.py  _avro_tar.py
daft/io/delta_lake/: _deltalake.py
daft/runners/: flotilla.py
daft/sql/: sql.py
docs/: SUMMARY.md  spatial-functions.md
docs/contributing/: local-setup-troubleshooting.md
docs/issues/: parquet-known-size-split-corruption.md
docs/superpowers/: 2026-07-10-spatial-deferred-findings.md
docs/superpowers/plans/: 2026-06-25-duckdb-local-engine-poc.md  2026-06-26-duckdb-rs-arrow-exprfilter-port.md  2026-06-26-duckdb-rs-arrow-v154-fullfilter.md  2026-06-26-duckdb-rs-zerocopy-arrow-shim.md  (+5 more)
examples/spatial_geohash_pruning/: spatial_partition_index.py
src/: lib.rs
src/daft-duckdb/: Cargo.toml
src/daft-duckdb/examples/: arrow_scan_spike.rs  session_bench.rs
src/daft-duckdb/src/: arrow_bridge.rs  executor.rs  expr_sql.rs  lib.rs  plan_sql.rs  python.rs
src/daft-functions/: Cargo.toml
src/daft-local-execution/: Cargo.toml
tests/duckdb_poc/: _harness.py  bench_duckdb_vs_swordfish.py  test_correctness.py
tests/expressions/: test_spatial.py  test_spatial_join.py
tests/io/: test_avro_tar.py
(+37 files in other folders)
