[package]
name = "daft-duckdb"
edition = "2021"
version = "0.3.0-dev0"
publish = false

[dependencies]
common-error = {path = "../common/error", default-features = false}
daft-core = {path = "../daft-core", default-features = false}
daft-dsl = {path = "../daft-dsl", default-features = false}
daft-local-plan = {path = "../daft-local-plan", default-features = false}
daft-micropartition = {path = "../daft-micropartition", default-features = false}
daft-recordbatch = {path = "../daft-recordbatch", default-features = false}
arrow-array = {workspace = true, features = ["ffi"]}
arrow-schema = {workspace = true}
duckdb = {git = "https://github.com/anshulgoel27/duckdb-rs", branch = "arrow-zerocopy", features = ["bundled", "vtab-arrow"]}
pyo3 = {workspace = true, optional = true}

[dev-dependencies]
daft-logical-plan = {path = "../daft-logical-plan", default-features = false}

[features]
python = [
  "dep:pyo3",
  "common-error/python",
  "daft-core/python",
  "daft-dsl/python",
  "daft-local-plan/python",
  "daft-micropartition/python",
  "daft-recordbatch/python",
]

[lints]
workspace = true
